Add kube-minions role
Implement kube-minion ansible role, using flannel as overlay network.

- Kubeconfig and kube-proxy point to keepalived/haproxy VIP

- Update inventory file, gorup names are changed

- Add vars sample file all.yml.sample

Resolves: #2

--- a/roles/kube-minion/handlers/main.yml
+++ b/roles/kube-minion/handlers/main.yml
@@ -1,7 +1,9 @@
 ---
-# handlers file for kube-worker
+# handlers file for kube-minions
 - name: daemon-reload
   command: systemctl daemon-reload
+- name: restart flannel
+  service: name=flannel state=restarted
 - name: restart docker
   service: name=docker state=restarted
 - name: restart kubelet
